# agentic-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  gunicorn.conf.py  nohup.out  pyproject.toml  rag_data.json  requirements-dev.txt  requirements.txt  streamlit.py  test.py  test_deployment.sh  validate.py  wsgi.py
.cursor/analysis/: deployment-analysis.md
.cursor/plans/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_QDRANT_GUIDE.md  OPENROUTER_MIGRATION_PLAN.md  QDRANT_MIGRATION_PLAN.md  QDRANT_SNAPSHOT_GUIDE.md  deployment-plan.md
.cursor/rules/: general.md
.sisyphus/plans/: rag-testing-implementation.md
agentic-chatbot/: app.py  requirements.txt
agentic-chatbot/agents/: models.py  rag.py  sql.py
agentic-chatbot/audio/: stt.py  tts.py
agentic-chatbot/models/: APIError.py  __init__.py
agents/: embedding_utils.py  models.py  rag.py
docs/: IMPLEMENTATION_PLAN_XLSX.md  XLSX_TO_QDRANT_ANALYSIS.md
prompts/: rag.py
qdrant_snapshots/: .gitkeep  README.md
scripts/: Informasi Umum ITB - Tabel.xlsx  README.md  crawl_urls.py  create_qdrant_snapshot.py  itb-admission-urls.md  migrate_pinecone_to_qdrant.py  parse_peraturan_pdf.py  parse_xlsx_admission.py  query_qdrant.py  reembed_snapshot.py  restore_qdrant_snapshot.py  restore_qdrant_snapshot.sh  url_config.json
tests/: README.md  conftest.py  conftest.py.bak  generate_synthetic_data.py
utils/: checkpointer.py  emotion.py  logging_config.py  stt.py  tts.py  validation.py
(+13 files in other folders)
