[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "cloudscraper>=1.2.71",
    "dotenv>=0.9.9",
    "grip>=4.6.2",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pinecone>=8.0.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
